--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
+    "openai": "^4.93.0",
     "sharp": "^0.33.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
