--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@babel/cli": "^7.27.0",
     "@babel/core": "^7.26.10",
+    "@babel/node": "^7.26.0",
     "@babel/preset-env": "^7.26.9",
     "cross-env": "^7.0.3",
     "rimraf": "^6.0.1"
