--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "kltn_be": "file:",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
     "openai": "^4.93.0",
     "sharp": "^0.33.5",
