--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "kltn_be": "file:",
