--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
     "openai": "^4.93.0",
+    "pdf-parse": "^1.1.1",
     "sharp": "^0.33.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
